Changes to use H2 database and local execution

--- a/np01-auth-service/pom.xml
+++ b/np01-auth-service/pom.xml
@@ -29,11 +29,16 @@
 	        <artifactId>spring-lemon-jpa</artifactId>
 	        <version>${spring-lemon.version}</version>
 	    </dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.25.0-GA</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
-		    <groupId>org.postgresql</groupId>
-		    <artifactId>postgresql</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 		</dependency>
 
 		<dependency>
