Changes for Home working

--- a/np01-auth-service/src/main/resources/bootstrap.yml
+++ b/np01-auth-service/src/main/resources/bootstrap.yml
@@ -9,3 +9,8 @@ spring:
       username: user
       password: topsecret
       label: ${git.branch},develop,master
+  main:
+    allow-bean-definition-overriding: true
+  h2:
+    console:
+      enabled: true
