--- a/np01-profile-service/src/main/resources/bootstrap.yml
+++ b/np01-profile-service/src/main/resources/bootstrap.yml
@@ -9,3 +9,6 @@ spring:
       username: user
       password: topsecret
       label: ${git.branch},develop,master
+  h2:
+    console:
+      enabled: true
